--- a/interview/04.谈谈Android的事件分发机制.md
+++ b/interview/04.谈谈Android的事件分发机制.md
@@ -13,3 +13,33 @@ dispatchTouchEvent()、onInterceptTouchEvent()、onTouchEvent()；
 
 ##### 补充（统一格式：昵称 + 补充答案）
 
+------
+
+**西安-重楼箫客**：
+
+核心要点：
+
+1. 事件分发原理: 责任链模式，事件层层传递，直到被消费。
+
+2. View 的 dispatchTouchEvent 主要用于调度自身的监听器和 onTouchEvent。
+
+3. View的事件的调度顺序是 onTouchListener > onTouchEvent > onLongClickListener > onClickListener 。
+
+4. 不论 View 自身是否注册点击事件，只要 View 是可点击的就会消费事件。
+
+5. 事件是否被消费由返回值决定，true 表示消费，false 表示不消费，与是否使用了事件无关。
+
+6. ViewGroup 中可能有多个 ChildView 时，将事件分配给包含点击位置的 ChildView。
+
+7. ViewGroup 和 ChildView 同时注册了事件监听器(onClick等)，由 ChildView 消费。
+
+8. 一次触摸流程中产生事件应被同一 View 消费，全部接收或者全部拒绝。
+
+9. 只要接受 ACTION_DOWN 就意味着接受所有的事件，拒绝 ACTION_DOWN 则不会收到后续内容。
+
+10. 如果当前正在处理的事件被上层 View 拦截，会收到一个 ACTION_CANCEL，后续事件不会再传递过来。
+
+    [GcsSloop]: http://www.gcssloop.com/customview/dispatch-touchevent-source
+
+    
+
