--- a/interview/04.谈谈Android的事件分发机制.md
+++ b/interview/04.谈谈Android的事件分发机制.md
@@ -39,7 +39,7 @@ dispatchTouchEvent()、onInterceptTouchEvent()、onTouchEvent()；
 
 10. 如果当前正在处理的事件被上层 View 拦截，会收到一个 ACTION_CANCEL，后续事件不会再传递过来。
 
-    [GcsSloop]: http://www.gcssloop.com/customview/dispatch-touchevent-source
+    > [GcsSloop]: http://www.gcssloop.com/customview/dispatch-touchevent-source
 
     
 
